@@ -4,6 +4,8 @@
 
 - Added parameter ListenAddress to all services (server, web server, agent)
 - New possible value for UseInterfaceAliases - concatenate name with alias
+- Added possibility to create custom message in event matching script and
+  use it in alarms and actions
 - Fixed issues: #193, #211
 
 
